--- a/rest-client-service/pom.xml
+++ b/rest-client-service/pom.xml
@@ -148,6 +148,16 @@
                                 <artifactId>mapstruct-processor</artifactId>
                                 <version>${org.mapstruct.version}</version>
                             </path>
+                            <path>
+                                <groupId>org.projectlombok</groupId>
+                                <artifactId>lombok</artifactId>
+                                <version>${lombok.version}</version>
+                            </path>
+                            <path>
+                                <groupId>org.projectlombok</groupId>
+                                <artifactId>lombok-mapstruct-binding</artifactId>
+                                <version>0.1.0</version>
+                            </path>
                             <!-- other annotation processors -->
                         </annotationProcessorPaths>
                     </configuration>
