--- a/rest-client-service/pom.xml
+++ b/rest-client-service/pom.xml
@@ -99,7 +99,13 @@
             <version>${org.mapstruct.version}</version>
         </dependency>
 
-<!--        <dependency>-->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok-mapstruct-binding</artifactId>
+            <version>0.1.0</version>
+        </dependency>
+
+        <!--        <dependency>-->
 <!--            <groupId>org.liquibase</groupId>-->
 <!--            <artifactId>liquibase-core</artifactId>-->
 <!--        </dependency>-->
