--- a/rest-client-service/src/main/resources/application-test.yml
+++ b/rest-client-service/src/main/resources/application-test.yml
@@ -7,11 +7,11 @@ spring:
     url: jdbc:h2:mem:clientsDB;DATABASE_TO_LOWER=TRUE
     username: testUser
     password: testUser
-  #    driverClassName: org.h2.Driver
+    driverClassName: org.h2.Driver
   h2:
     console:
       enabled: true
       path: /h2
-#  liquibase:
-#    changelog: classpath:/db/changelogs/master-changelog.xml
-#    contexts: test
+  liquibase:
+    changelog: classpath:/db/master-changelog.xml
+    contexts: test
